--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "lhama-phone",
   "version": "0.1.0",
   "private": true,
+  "main": "./main.js",
   "dependencies": {
     "@types/jest": "24.0.17",
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
+    "electron": "^6.0.1",
+    "eslint": "^6.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:web & (sleep 5; npm run electron 2>/dev/null)",
+    "start:web": "BROWSER=none react-scripts start",
+    "electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
