--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
+    "@types/react-router-dom": "^4.3.4",
     "bootstrap": "^4.3.1",
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "typescript": "3.5.3"
   },
