--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "./main.js",
   "dependencies": {
+    "@material/react-material-icon": "^0.15.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
@@ -13,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
+    "jssip_client": "^0.3.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.5.3"
   },
   "scripts": {
