--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bootstrap": "^4.3.1",
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
-    "jssip_client": "^0.3.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
@@ -23,7 +22,9 @@
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.5.3"
+    "sip.js": "^0.15.4",
+    "typescript": "3.5.3",
+    "webrtc-adapter": "^7.2.9"
   },
   "scripts": {
     "start": "npm run start:web & (sleep 5; npm run electron 2>/dev/null)",
