--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material/react-material-icon": "^0.15.0",
     "@types/jest": "24.0.17",
+    "@types/lodash.get": "^4.4.6",
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
@@ -14,16 +15,19 @@
     "bootstrap": "^4.3.1",
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
+    "lodash.get": "^4.4.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
+    "react-smart-tabs": "^0.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sip.js": "^0.15.4",
     "typescript": "3.5.3",
+    "uuid": "^3.3.2",
     "webrtc-adapter": "^7.2.9"
   },
   "scripts": {
