--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material/react-material-icon": "^0.15.0",
     "@types/jest": "24.0.17",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.reduce": "^4.6.6",
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
@@ -17,6 +18,7 @@
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
     "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
