--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webrtc-adapter": "^7.2.9"
   },
   "scripts": {
+    "start": "npm run start:no-browser",
     "start:no-browser": "BROWSER=none react-scripts start",
     "start:web": "BROWSER=chrome react-scripts start",
     "start:gambiarra": "npm run start:no-browser & (sleep 5; npm run electron 2>/dev/null)",
