--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material/react-material-icon": "^0.15.0",
     "@types/jest": "24.0.17",
+    "@types/lodash.chunk": "^4.2.6",
     "@types/lodash.find": "^4.6.6",
     "@types/lodash.findkey": "^4.6.6",
     "@types/lodash.get": "^4.4.6",
@@ -19,6 +20,7 @@
     "bootstrap": "^4.3.1",
     "electron": "^6.0.1",
     "eslint": "^6.1.0",
+    "lodash.chunk": "^4.2.0",
     "lodash.find": "^4.6.0",
     "lodash.findkey": "^4.6.0",
     "lodash.get": "^4.4.2",
